<resources>
    <string name="app_name">StoryApp</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Mau belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicoding aja!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding\!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="name">Nama</string>
    <string name="logout">Keluar</string>
    <string name="description">Ini adalah deskripsi dari cerita</string>
    <string name="error_message">Telah terjadi error\! %1$s</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="upload">Unggah</string>
    <string name="empty_image_warning">Silahkan masukkan berkas gambar terlebih dahulu</string>
    <string name="floating_button">Tambah cerita</string>
    <string name="et_description">Silahkan isi deskripsi dari story anda</string>
    <string name="ok">Iya</string>
    <string name="cancel">Batalkan</string>
    <string name="logout_title">Logout</string>
    <string name="logout_msg">Apakah anda yakin ingin logout?</string>
    <string name="Language">Bahasa</string>
    <string name="invalid_email">Format email tidak valid</string>
    <string name="invalid_password">Password minimal berisi 8 karakter</string>
    <string name="error_description">Silahkan cek koneksi anda!</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="maps">Maps</string>
</resources>